[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spry"
version = "0.5.5"
description = "social media scanner"
readme = "README.rst"
requires-python = ">=3.12"
license = "GPL-3.0"
authors = [
    {name = "James A. Campbell", email = "james@jamescampbell.us"}
]
keywords = ["social", "collector", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "requests",
    "clint",
    "fpdf",
    "beautifulsoup4",
    "termcolor",
    "pysocks",
    "weasyprint",
]

[project.urls]
Homepage = "https://github.com/jamesacampbell/spry"
Repository = "https://github.com/jamesacampbell/spry"
Documentation = "http://spry.rtfd.io"

[project.scripts]
spry = "spry.spry:main"

[tool.setuptools]
packages = ["spry", "spry.modules"]

